-----------------------------
mapfinal-0.3.2:

新增：新增RenderObject渲染对象
新增：RenderEngine新增点线面渲染方法
新增：新增MapCS对象,支持坐标的增删改查
新增：新增多种CoordinateSequence对象
新增：新增geom(point,line,polygon)对象定义
新增：新增图层事件机制
新增：新增ImageOverlay图层
新增：新增Marker图层
新增：PointLayer、PolylineLayer和PolygonLayer增加点线面图层
新增：新增拾取功能
新增：新增缩放到Bounds框中功能
优化：RenderEngine精简
优化：所有cancelDraw更改为handleEvent，以适应opengl的渲染需要
优化：优化鼠标坐标的传递，统一jwt和android
优化：优化layer获取
优化：优化listener移除
优化：优化Symbol，增加SimpleMarkerSymbol
优化：完善BundleSource的缓存
优化：优化LRU缓存
优化：优化Bundle的界面缓存
优化：Event可拷贝
优化：去掉原Graphic，GeoElement改为Graphic
优化：优化Feature的点、线绘制
优化：将鼠标事件移出到MapView外部
优化：拾取监听改为click监听
优化：优化pick过程
优化：优化shp格式文件dbf记录获取接口
优化：dbf读取增加charsetName编码设置
修复：修复无法读取ArcGIS点数据的问题修改
修复：修复PolygonLayer内部存储错误
修复：修复shp文件和dbf记录对应错误
修复：修复PointLayer拾取错误

-----------------------------
mapfinal-0.3.1:

新增：json持久化接口
新增：event事件管理接口
新增：fps显示
优化：优化网络图片下载线程
优化：添加注释，更名operator为processor
优化：优化场景绘制面板大小=屏幕大小
优化：瓦片加入缓存层绘制一次，再绘制在线瓦片图层
修复：修复Tile的CurrentTileNumberOnScreen设置错误

-----------------------------
mapfinal-0.3:

新增：加入操作器
新增：操作器中加入抽稀压缩算法
新增：加入ResourceCache管理资源内存
新增：增加dbf的读取
新增：增加bundle格式的支持
优化：shp采用RandomAccessFile指定Feature读取
优化：shp显示加入点抽稀处理
优化：抽取Tile切片行列算法为调度器的索引算法
优化：优化图片缓存
优化：优化Resource的管理，强化ResourcceObject对资源的操作和管理。
优化：FeatureDispatcher中，索引结果再次判断包围盒交集，过滤索引结果
优化：将运行界面及swing相关的代码移植test中，如需启动窗口界面，请运行com.mapfinal.platform.develop.frame.MapFinalFrame
优化：重构resource资源管理器的所有代码
优化：分离Tile的resource和feature
优化：Tile和ScreenCacheImpl的屏幕大小缓存
优化：增加FeatureClass，改写TileFeature
优化：重构资源架构，采用资源目录-资源-数据结构管理资源
优化：优化Tile切片的销毁机制，减小内存占用
修复：修复文件下载后，写文件与读文件同时产生的读取错误

-----------------------------
mapfinal-0.2:

新增：shp文件读取和显示
新增：tile切片（TMS）读取和显示

-----------------------------
mapfinal-0.1:

新增：资源管理器、渲染器、图层管理器、转换器、调度器